--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -30,5 +30,9 @@
 <a href="{% url 'main:create_book' %}">
   <button>Add New Book</button>
 </a>
+<a href="{% url 'main:logout' %}">
+  <button>Logout</button>
+</a>
+<h5>Sesi terakhir login: {{ last_login }}</h5>
 {% endblock content %}
 
